--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -86,7 +86,7 @@
     <input class="btn btn-success pull-right" type='submit' value='Ajouter l&apos;avis'/>
 
     <div class="control-group">
-        <label class="control-label no-top-padding" for="DISPLAY_HISTORIQUE">Afficher dans l'historique de l'établissement</label>
+        <label class="control-label no-top-padding" for="DISPLAY_HISTORIQUE">Afficher dans l'onglet de l'établissement</label>
         <div class="controls">
             <input type='hidden' name='DISPLAY_HISTORIQUE' value='0'>
             <input
