--- a/application/views/scripts/search/dossier.phtml
+++ b/application/views/scripts/search/dossier.phtml
@@ -40,7 +40,7 @@
                 <input type='submit' class="btn" name='Rechercher' value="Rechercher" onsubmit="afficherBoutonExportCalc()" />
                 <input type='hidden' name='page' value="1" />
         </div>
-    
+
         <div class="pull-left" style='margin: 9px 0 0 5px'>
             <small>
                 <a href="/search/dossier?label=&page=1">
@@ -54,7 +54,7 @@
         <div class='row-fluid'>
             <div>
                 <select name='types[]' class="span3 chosen" data-placeholder='Types' multiple onchange="masquerBoutonExportCalc()">
-                    <?php foreach( $this->DB_type as $type ) : ?>
+                    <?php foreach ($this->DB_type as $type): ?>
                         <option value='<?php echo $type["ID_DOSSIERTYPE"] ?>' <?php if(isset($_GET["types"]) && in_array($type["ID_DOSSIERTYPE"], (array) $_GET["types"])) echo 'selected' ?>><?php echo $type["LIBELLE_DOSSIERTYPE"] ?></option>
                     <?php endforeach ?>
                 </select>
@@ -73,7 +73,7 @@
                     ?>
                 </select>
                 <select name='groupements_territoriaux[]' class="span3 chosen" data-placeholder='Groupements territoriaux' multiple onchange="masquerBoutonExportCalc()">
-                    <?php foreach( $this->DB_groupementterritorial as $groupement ) : ?>
+                    <?php foreach ($this->DB_groupementterritorial as $groupement): ?>
                         <?php $selected = false; ?>
                         <?php if ($this->user['groupements'] != null): ?>
                             <?php foreach($this->user['groupements'] as $user_groupement): ?>
@@ -106,77 +106,97 @@
                 </select>
             </div>
         </div>
-        <div class='row-fluid span12'>
-        </div>
-        <div class='row-fluid'>
-            <div class='span4'>
-                <select name='commune' class="span12 chosen" data-placeholder='Sélectionner une commune' onchange="masquerBoutonExportCalc()">
-                    <option value=''></option>
-                <?php foreach( $this->array_communes as $commune ) : ?>
-                    <option value='<?php echo $commune["NUMINSEE_COMMUNE"] ?>' <?php if(isset($_GET["commune"]) && $commune["NUMINSEE_COMMUNE"] == $_GET["commune"]) echo 'selected' ?>><?php echo $commune["LIBELLE_COMMUNE"] ?></option>
-                <?php endforeach ?>
-                </select>
-            </div>
-            <div class='span3'>
-                <select name='voie' class="span12 chosen" data-placeholder='Sélectionner une voie' onchange="masquerBoutonExportCalc()">
-                    <option value=''></option>
-                    <?php foreach( $this->array_voies as $voie ) : ?>
-                        <option value='<?php echo $voie["ID_RUE"] ?>' <?php if(isset($_GET["voie"]) && $voie["ID_RUE"] == $_GET["voie"]) echo 'selected' ?>><?php echo $voie["LIBELLE_RUE"] ?></option>
-                    <?php endforeach ?>
-                </select>
-            </div>
-            <div class='span5'>
-                <span class='span1'>&nbsp;</span>
-                <span class='span2'>Création</span>
-                <span class='span1'>du&nbsp;</span>
+        <div class='row-fluid mt-5'>
+            <div class='span7'>
+                <div class='row-fluid'>
+                    <div class='span6'>
+                        <select name='commune' class="span12 chosen" data-placeholder='Sélectionner une commune' onchange="masquerBoutonExportCalc()">
+                            <option value=''></option>
+                        <?php foreach ($this->array_communes as $commune): ?>
+                            <option value='<?php echo $commune["NUMINSEE_COMMUNE"] ?>' <?php if(isset($_GET["commune"]) && $commune["NUMINSEE_COMMUNE"] == $_GET["commune"]) echo 'selected' ?>><?php echo $commune["LIBELLE_COMMUNE"] ?></option>
+                        <?php endforeach ?>
+                        </select>
+                    </div>
 
-
-                <input type='text' name='date-creation-start' value='<?php echo $dateCreationStart ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
-                &nbsp;au&nbsp;
-                <input type='text' name='date-creation-end' value='<?php echo $dateCreationEnd ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
+                    <div class='span6'>
+                        <select name='voie' class="span12 chosen" data-placeholder='Sélectionner une voie' onchange="masquerBoutonExportCalc()">
+                            <option value=''></option>
+                            <?php foreach ($this->array_voies as $voie): ?>
+                                <option value='<?php echo $voie["ID_RUE"] ?>' <?php if(isset($_GET["voie"]) && $voie["ID_RUE"] == $_GET["voie"]) echo 'selected' ?>><?php echo $voie["LIBELLE_RUE"] ?></option>
+                            <?php endforeach ?>
+                        </select>
+                    </div>
+                </div>
+                <div class='row-fluid'>
+                    <div class='span6'>
+                        <select name='numero' class="span12 chosen" data-placeholder='Sélectionner un numéro' onchange="masquerBoutonExportCalc()">
+                            <option value=''></option>
+                            <?php foreach ($this->array_numeros as $numero): ?>
+                                <option value='<?= $numero["NUMERO_ADRESSE"] ?>' <?php if (isset($_GET["numero"]) && $numero["NUMERO_ADRESSE"] === $_GET["numero"]) echo 'selected' ?>><?= $numero["NUMERO_ADRESSE"] ?></option>
+                            <?php endforeach ?>
+                        </select>
+                    </div>
+                </div>
+                <div class='row-fluid mt-3'>
+                    <div class="span6">
+                        <select name="preventionniste" class='span12 chosen' data-placeholder='Sélectionner un préventionniste' onchange="masquerBoutonExportCalc()">
+                            <option value=''></option>
+                            <?php foreach ($this->liste_prev as $prev): ?>
+                                <option value='<?php echo $prev["ID_PREVENTIONNISTE"] ?>' <?php if(isset($_GET["preventionniste"]) && $prev["ID_PREVENTIONNISTE"] == $_GET["preventionniste"]) echo 'selected' ?>><?php echo $prev["NOM_UTILISATEURINFORMATIONS"]." ".$prev["PRENOM_UTILISATEURINFORMATIONS"] ?></option>
+                            <?php endforeach ?>
+                        </select>
+                    </div>
+                </div>
+                <div class='row-fluid mt-4'>
+                    <div class='span6'>
+                        <input type="text" name='permis' class='span12' value="<?php echo isset($_GET["permis"])?htmlentities($_GET["permis"]):'' ?>" placeholder="Numéro de permis" onkeypress="masquerBoutonExportCalc()" />
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class='row-fluid'>
-            <div class='span4'>
-                <input type="text" name='permis' class='span12' value="<?php echo isset($_GET["permis"])?htmlentities($_GET["permis"]):'' ?>" placeholder="Numéro de permis" onkeypress="masquerBoutonExportCalc()" />
-            </div>
-            <div class='span3'>&nbsp;</div>
             <div class='span5'>
-                <span class='span1'>&nbsp;</span>
-                <span class='span2'>Réception</span>
-                <span class='span1'>du&nbsp;</span>
-                <input type='text' name='date-reception-start' value='<?php echo $dateReceptionStart ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
-                &nbsp;au&nbsp;
-                <input type='text' name='date-reception-end' value='<?php echo $dateReceptionEnd ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
-            </div>
-        </div>
-        <div class='row-fluid'>
-            <div class='span4'>
-                <select name="preventionniste" class='span12 chosen' data-placeholder='Sélectionnez un préventionniste' onchange="masquerBoutonExportCalc()">
-                    <option value=''></option>
-                    <?php foreach( $this->liste_prev as $prev ) : ?>
-                    <option value='<?php echo $prev["ID_PREVENTIONNISTE"] ?>' <?php if(isset($_GET["preventionniste"]) && $prev["ID_PREVENTIONNISTE"] == $_GET["preventionniste"]) echo 'selected' ?>><?php echo $prev["NOM_UTILISATEURINFORMATIONS"]." ".$prev["PRENOM_UTILISATEURINFORMATIONS"] ?></option>
-                    <?php endforeach ?>
-                </select>
-            </div>
-            <div class='span3'>&nbsp;</div>
-            <div class='span5'>
-                <span class='span1'>&nbsp;</span>
-                <span class='span2'>Réponse</span>
-                <span class='span1'>du&nbsp;</span>
-                <input type='text' name='date-reponse-start' value='<?php echo $dateReponseStart ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
-                &nbsp;au&nbsp;
-                <input type='text' name='date-reponse-end' value='<?php echo $dateReponseEnd ?>' class='datepicker span3' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
+                <div class='row-fluid'>
+                    <div class='span2'>Création</div>
+                    <div class='span1'>du</div>
+                    <div class='span3'>
+                        <input type='text' name='date-creation-start' value='<?php echo $dateCreationStart ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
+                    </div>
+                    <div class='span1'>au</div>
+                    <div class="span3">
+                        <input type='text' name='date-creation-end' value='<?php echo $dateCreationEnd ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()">
+                    </div>
+                </div>
+                <div class='row-fluid'>
+                    <div class='span2'>Réception</div>
+                    <div class='span1'>du</div>
+                    <div class="span3">
+                        <input type='text' name='date-reception-start' value='<?php echo $dateReceptionStart ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
+                    </div>
+                    <div class='span1'>au</div>
+                    <div class="span3">
+                        <input type='text' name='date-reception-end' value='<?php echo $dateReceptionEnd ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
+                    </div>
+                </div>
+                <div class='row-fluid'>
+                    <div class='span2'>Réponse</div>
+                    <div class='span1'>du</div>
+                    <div class="span3">
+                        <input type='text' name='date-reponse-start' value='<?php echo $dateReponseStart ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
+                    </div>
+                    <div class='span1'>au</div>
+                    <div class="span3">
+                        <input type='text' name='date-reponse-end' value='<?php echo $dateReponseEnd ?>' class='datepicker span12' onchange="masquerBoutonExportCalc()" onkeypress="masquerBoutonExportCalc()"/>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-<?php if( count($this->results) > 0 ) : ?>
+<?php if( count($this->results) > 0): ?>
     <div style='display:inline-block;width: 100%;' >
         <div class='pull-left'>
             <p class='muted'><small>Nombre total d'éléments : <?php echo $this->results->getTotalItemCount() ?></small></p>
         </div>
-        <?php if( $this->results->getTotalItemCount() <= 10000 ) : ?>
+        <?php if( $this->results->getTotalItemCount() <= 10000): ?>
             <div class='pull-right'>
                 <input type='submit' class='btn btn-success' id='exporter' name='Exporter' value='Export Calc' <?php echo (($this->is_allowed_export_calc) ? '' : 'style="visibility: hidden;"') ?>>
             </div>
@@ -257,6 +277,29 @@
             }
         });
 
+        $('select[name=voie]').change(function(){
+            var selectedValue = $(this).val()
+            if (selectedValue != ""){
+                $.ajax({
+                    url: "/api/1.0/adresse/get_numeros",
+                    type: 'post',
+                    data: {
+                        id_rue: selectedValue
+                    },
+                    success: function (result) {
+                        const selectNumero = $('select[name=numero]');
+                        selectNumero.empty();
+                        selectNumero.append("<option value=''></option>");
+                        $.each(result.response, function (i, numero) {
+                            selectNumero.append($("<option></option>")
+                                .attr("value",numero.NUMERO_ADRESSE).text(numero.NUMERO_ADRESSE));
+                        });
+                        $('.chosen').trigger("chosen:updated");
+                    }
+                });
+            }
+        });
+
 
         $(".datepicker").datepicker({
             dateFormat:"dd/mm/yy",
@@ -289,7 +332,7 @@
     });
 
     function masquerBoutonExportCalc ()
-    {   
+    {
         <?php if(count($this->results) > 0 && $this->results->getTotalItemCount() <= 10000 && $this->is_allowed_export_calc) :?>
             document.getElementById('exporter').style.display = "none"
         <?php endif ?>
