Permet de désactiver les affichages Plat'AU

--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -1,6 +1,6 @@
 <h1>
     Aie !
-    <small>Une erreur '<?php echo $this->message ?>' est survenue ...</small>
+    <small>Une erreur "<?php echo $this->message ?>" est survenue ...</small>
 </h1>
 
 <p class="lead">
