--- a/application/views/scripts/retablir/partials/partial-deleted-dossiers.phtml
+++ b/application/views/scripts/retablir/partials/partial-deleted-dossiers.phtml
@@ -6,15 +6,15 @@
     <table class="table table-hover table-bordered">
         <thead>
             <tr>
-                <th>Supprimé par</th>
+                <th class="whitespace-nowrap">Supprimé par</th>
                 <th>Nom du dossier</th>
-                <th></th>
+                <th class="whitespace-nowrap"></th>
             </tr>
         </thead>
         <tbody>
             <?php foreach($this->data as $deletedElement) : ?>
                 <tr>
-                    <td>
+                    <td class="whitespace-nowrap">
                         <p><?= $deletedElement['USERNAME_UTILISATEUR'] ?></p>
                     </td>
 
@@ -57,7 +57,7 @@
                         </a>
                     </td>
 
-                    <td>
+                    <td class="whitespace-nowrap">
                         <a
                             class='btn-small'
                             href=<?= '/dossier/retablir-dossier/idDossier/'.$deletedElement['ID_DOSSIER'] ?>
