--- a/public/css/utilities.css
+++ b/public/css/utilities.css
@@ -2,12 +2,24 @@
     margin-top: 0.5rem;
 }
 
+.mb-2 {
+    margin-bottom: 0.5rem;
+}
+
 .mt-3 {
     margin-top: 1rem;
 }
 
+.mb-3 {
+    margin-bottom: 1rem;
+}
+
 .mt-4 {
     margin-top: 1.5rem;
+}
+
+.mb-4 {
+    margin-bottom: 1.5rem;
 }
 
 .mt-5 {
